--- a/Sunduk.PWA/_Imports.razor
+++ b/Sunduk.PWA/_Imports.razor
@@ -19,6 +19,7 @@
 @using Sunduk.PWA.Components.Stuff
 @using Sunduk.PWA.Components.Converters
 @using Sunduk.PWA.Components.Knowledge
+@using Sunduk.PWA.Components.TimeCalc
 @using Sunduk.PWA.Util
 @using Sunduk.PWA.Dialogs
 @using Sunduk.PWA.Infrastructure
